tests/anp_np_banp_core_test/core_anp_np_banp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-example
spec:
  priority: 10
  subject:
    namespaces:
      matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "pass-all-ingress-from-slytherin" 
    action: "Pass"
    from:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
  egress:
  - name: "pass-all-egress-to-slytherin"
    action: "Pass" 
    to:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gress-from-to-slytherin-to-gryffindor
  namespace: network-policy-conformance-gryffindor
spec:
  podSelector:
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          conformance-house: slytherin
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    namespaces:
      matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "deny-all-ingress-from-slytherin"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
  egress:
  - name: "deny-all-egress-to-slytherin"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
